add @media (max-width: 576px)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 			<nav class="nav">
 				<a href="#" class="logo">
-					<img class="logo" src="./img/MoGo.svg" alt="MoGo">
+					<img class="mogo" src="./img/MoGo.svg" alt="MoGo">
 				</a>
 
 				<div class="nav__menu">
@@ -44,6 +44,12 @@
 							<img src="./img/icons7.svg" alt="search">
 						</a>
 					</div>
+				</div>
+
+				<div class="header__btn header__btn--open">
+					<div></div>
+					<div></div>
+					<div></div>
 				</div>
 			</nav>
 
