--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-	<header class="header">
+	<header class="header header--open">
 		<div class="container">
 
 			<nav class="nav">
@@ -355,12 +355,12 @@
 		<div class="container">
 
 			<div class="partners__wrap">
-				<img src="./img/1.svg" alt="">
-				<img src="./img/2.svg" alt="">
-				<img src="./img/3.svg" alt="">
-				<img src="./img/4.svg" alt="">
-				<img src="./img/5.svg" alt="">
-				<img src="./img/6.svg" alt="">
+				<img class="partners__icon-1" src="./img/1.svg" alt="">
+				<img class="partners__icon-2" src="./img/2.svg" alt="">
+				<img class="partners__icon-3" src="./img/3.svg" alt="">
+				<img class="partners__icon-4" src="./img/4.svg" alt="">
+				<img class="partners__icon-5" src="./img/5.svg" alt="">
+				<img class="partners__icon-6" src="./img/6.svg" alt="">
 			</div>
 
 		</div>
@@ -400,6 +400,9 @@
 						<p>creatively design	<br> <small>Lorem ipsum dolor sit</small> </p>
 					</div>
 				</div>
+				<div class="works__items works__items-3--mobile">
+					<img src="./img/unsplash_PzYiCWOHtfU.png" alt="">
+				</div>
 				<div class="works__items works__items-4">
 					<img src="./img/unsplash_JDN-_FIqB3k.png" alt="">
 					<div class="column__content--gradient"></div>
@@ -423,6 +426,9 @@
 						<img class="column__icon" src="./img/cup.svg" alt="">
 						<p>creatively design	<br> <small>Lorem ipsum dolor sit</small> </p>
 					</div>
+				</div>
+				<div class="works__items works__items-6--mobile">
+					<img src="./img/unsplash_K67sBVqLLuw464.png" alt="">
 				</div>
 				<div class="works__items works__items-7">
 					<img src="./img/unsplash_o_9YmCY0bag.png" alt="">
