add @media (max-width: 576px)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="scss/index.scss">
 	<title>MoGo</title>
+	<link rel="stylesheet" href="scss/index.scss">
 </head>
 <body>
 
@@ -208,7 +208,7 @@
 		</div>
 	</section>
 
-	<!-- <section class="platform">
+	 <section class="platform">
 		<div class="container">
 
 			<h4 class="subtitle">Service</h4>
@@ -257,11 +257,18 @@
 			</div>
 
 		</div>
-	</section> -->
+	</section> 
 
 	<section class="reviews reviews--grey">
 		<div class="container">
 			<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+				 </div>
 				<div class="carousel-inner">
 				  	<div class="carousel-item active">
 						<img class="carousel-img--without-photo" src="./img/message_2.svg" alt="photo">
@@ -277,6 +284,27 @@
 							<div class="reviews__name">James Philips</div>
 					  </div>
 					</div>
+					<div class="carousel-item">
+						<img class="carousel-img--without-photo" src="./img/message_2.svg" alt="photo">
+						<div class="reviews__content">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque nec diam platea ullamcorper feugiat amet. Id aliquet vehicula feugiat arcu arcu nulla ornare. Sed amet venenatis, massa sit.</p>
+							<div class="reviews__name">Jon Doe</div>
+						</div>
+				  	</div>
+					<div class="carousel-item">
+						<img src="./img/Ellipse10.png" alt="photo">
+						<div class="reviews__content">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque nec diam platea ullamcorper feugiat amet. Id aliquet vehicula feugiat arcu arcu nulla ornare. Sed amet venenatis, massa sit.</p>
+							<div class="reviews__name">James Philips</div>
+					  </div>
+					</div>
+					<div class="carousel-item">
+						<img class="carousel-img--without-photo" src="./img/message_2.svg" alt="photo">
+						<div class="reviews__content">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque nec diam platea ullamcorper feugiat amet. Id aliquet vehicula feugiat arcu arcu nulla ornare. Sed amet venenatis, massa sit.</p>
+							<div class="reviews__name">Jon Doe</div>
+						</div>
+				  	</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
 				  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -445,7 +473,14 @@
 
 	<section class="reviews reviews--space-around">
 		<div class="container">
-			<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+			<div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+				 </div>
 				<div class="carousel-inner">
 				  	<div class="carousel-item">
 						<img class="carousel-img--without-photo" src="./img/message_2.svg" alt="photo">
@@ -461,12 +496,33 @@
 							<div class="reviews__name">James Philips</div>
 					  </div>
 					</div>
+					<div class="carousel-item">
+						<img class="carousel-img--without-photo" src="./img/message_2.svg" alt="photo">
+						<div class="reviews__content">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque nec diam platea ullamcorper feugiat amet. Id aliquet vehicula feugiat arcu arcu nulla ornare. Sed amet venenatis, massa sit.</p>
+							<div class="reviews__name">Jon Doe</div>
+						</div>
+				  	</div>
+					<div class="carousel-item">
+						<img src="./img/Ellipse10.png" alt="photo">
+						<div class="reviews__content">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque nec diam platea ullamcorper feugiat amet. Id aliquet vehicula feugiat arcu arcu nulla ornare. Sed amet venenatis, massa sit.</p>
+							<div class="reviews__name">James Philips</div>
+					  </div>
+					</div>
+					<div class="carousel-item">
+						<img class="carousel-img--without-photo" src="./img/message_2.svg" alt="photo">
+						<div class="reviews__content">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque nec diam platea ullamcorper feugiat amet. Id aliquet vehicula feugiat arcu arcu nulla ornare. Sed amet venenatis, massa sit.</p>
+							<div class="reviews__name">Jon Doe</div>
+						</div>
+				  	</div>
 				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
 				  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 				  <span class="visually-hidden">Previous</span>
 				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next">
 				  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 				  <span class="visually-hidden">Next</span>
 				</button>
@@ -614,7 +670,9 @@
 
 			<div class="column">
 				<div class="column__item">
-					<img class="footer__logo" src="./img/MoGo_2.svg" alt="">
+					<a href="#">
+						<img class="footer__logo" src="./img/MoGo_2.svg" alt="">
+					</a>
 					<div class="column__text">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis proin varius vitae leo eget tincidunt duis amet. Et amet dis vel imperdiet volutpat mauris est leo cursus.</p>
 					</div>
